--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "JwtKey" : "ZmVkYWY3ZDg4NjNiNDhlMTk3Yjky0DdkNDkyYjcw0GU=",
+  "ApiKeyName" : "api_key",
+  "ApiKey" : "curso_api_IlTevUM/z0ey3NwCV/unWg=",
+  "SmtpConfiguration" :{
+    "Host" : "smtp.sendgrid.net",
+    "Port" : "587",
+    "UserName" : "apikey",
+    "Password" : "YourStrong@Passw0rd"
+
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
