--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     "Host" : "smtp.sendgrid.net",
     "Port" : "587",
     "UserName" : "apikey",
-    "Password" : "YourStrong@Passw0rd"
+    "Password" : "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"
 
   },
   
